--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,19 @@ name: publish-algowiki
 on:
   push:
     branches:
-      - main  # Trigger al push su main
+      - main
 
 permissions:
-  contents: write # Necessario per scrivere sulla branch gh-pages
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,12 +28,21 @@ jobs:
       - name: Install dependencies
         run: pip install mkdocs-material
 
-      - name: Configure Git User
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+      - name: Build MkDocs
+        run: mkdocs build
 
-      - name: Deploy to gh-pages
-        # Questo comando crea/aggiorna la branch gh-pages e ci mette il sito statico
-        # L'opzione --cname crea automaticamente il file CNAME necessario
-        run: mkdocs gh-deploy --force --cname algowiki.dev
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
