--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,10 +57,10 @@ markdown_extensions:
   # Gestione Admonitions avanzate (!!! success "Titolo")
   - pymdownx.details
   
-  # Gestione Emoji (:white_check_mark:)
+# Gestione Emoji
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 # I tuoi script custom
 extra_javascript:
